--- a/designer/new_project.ui
+++ b/designer/new_project.ui
@@ -597,7 +597,7 @@ QPushButton:pressed {
                           </widget>
                          </item>
                          <item>
-                          <widget class="QComboBox" name="cb_video_device"/>
+                          <widget class="QComboBox" name="cb_video_devices"/>
                          </item>
                          <item>
                           <spacer name="verticalSpacer">
