added minimum time calculation

--- a/designer/new_project.ui
+++ b/designer/new_project.ui
@@ -634,7 +634,7 @@ QPushButton:pressed {
                </property>
                <layout class="QVBoxLayout" name="verticalLayout_2">
                 <item>
-                 <widget class="QFrame" name="frame_6">
+                 <widget class="QFrame" name="name_location">
                   <property name="frameShape">
                    <enum>QFrame::StyledPanel</enum>
                   </property>
@@ -850,6 +850,25 @@ QPushButton:pressed {
                         </property>
                         <property name="alignment">
                          <set>Qt::AlignCenter</set>
+                        </property>
+                       </widget>
+                      </item>
+                     </layout>
+                    </widget>
+                   </item>
+                   <item>
+                    <widget class="QFrame" name="frame_6">
+                     <property name="frameShape">
+                      <enum>QFrame::StyledPanel</enum>
+                     </property>
+                     <property name="frameShadow">
+                      <enum>QFrame::Raised</enum>
+                     </property>
+                     <layout class="QVBoxLayout" name="verticalLayout_12">
+                      <item>
+                       <widget class="QLabel" name="minimum_time_label">
+                        <property name="text">
+                         <string>TextLabel</string>
                         </property>
                        </widget>
                       </item>
