--- a/resources/ui/DisplayResults.ui
+++ b/resources/ui/DisplayResults.ui
@@ -53,12 +53,9 @@
            </widget>
           </item>
           <item>
-           <widget class="QFrame" name="spectrum_frame">
-            <property name="frameShape">
-             <enum>QFrame::StyledPanel</enum>
-            </property>
-            <property name="frameShadow">
-             <enum>QFrame::Raised</enum>
+           <widget class="QGroupBox" name="spectrum_groupBox">
+            <property name="title">
+             <string>3rd Octave Spectrum</string>
             </property>
             <layout class="QHBoxLayout" name="horizontalLayout_3">
              <item>
@@ -198,29 +195,6 @@
                 </item>
                </layout>
               </widget>
-             </item>
-             <item>
-              <layout class="QHBoxLayout" name="horizontalLayout_10">
-               <item>
-                <widget class="QSpinBox" name="row_sb"/>
-               </item>
-               <item>
-                <widget class="QSpinBox" name="col_sb"/>
-               </item>
-               <item>
-                <spacer name="horizontalSpacer">
-                 <property name="orientation">
-                  <enum>Qt::Horizontal</enum>
-                 </property>
-                 <property name="sizeHint" stdset="0">
-                  <size>
-                   <width>40</width>
-                   <height>20</height>
-                  </size>
-                 </property>
-                </spacer>
-               </item>
-              </layout>
              </item>
             </layout>
            </widget>
