--- a/resources/ui/Calibrate.ui
+++ b/resources/ui/Calibrate.ui
@@ -41,7 +41,7 @@
            </widget>
           </item>
           <item>
-           <widget class="QLineEdit" name="lineEdit"/>
+           <widget class="QLineEdit" name="spl_value"/>
           </item>
          </layout>
         </widget>
@@ -56,7 +56,7 @@
          </property>
          <layout class="QHBoxLayout" name="horizontalLayout_3">
           <item>
-           <widget class="QPushButton" name="pushButton">
+           <widget class="QPushButton" name="calibrate_button">
             <property name="text">
              <string>Calibrate!</string>
             </property>
